# DSAR

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
plans/: dsar-toolkit-implementation.md
scripts/: compile_package.py  web_ui.py
scripts/communication/: slack_dsar.py
scripts/core/: __init__.py  activity_log.py  docgen.py  redaction.py  utils.py
scripts/crm_sales/: hubspot_dsar.py  pipedrive_dsar.py  salesforce_dsar.py
scripts/dev_tools/: github_dsar.py  gitlab_dsar.py
scripts/finance/: stripe_dsar.py
scripts/generic/: generic_csv_dsar.py  generic_json_dsar.py
scripts/hr_people/: bamboohr_dsar.py  charliehr_dsar.py  greenhouse_dsar.py
scripts/identity/: okta_dsar.py
scripts/marketing/: mailchimp_dsar.py
scripts/productivity/: confluence_dsar.py  google_workspace_dsar.py  microsoft365_dsar.py  notion_dsar.py
scripts/project_mgmt/: asana_dsar.py  jira_dsar.py  monday_dsar.py  trello_dsar.py
scripts/support/: freshdesk_dsar.py  intercom_dsar.py  zendesk_dsar.py
tests/: __init__.py  test_activity_log.py  test_docgen.py  test_gdpr_mentions.py  test_redaction.py  test_utils.py
